--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,8 +1,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/exit"
+        android:title="@string/exit_menu"
+        
+        />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"/>
+    
+    <item
+        android:id="@+id/help"
+        android:title="@string/exit_menu"
+        
+        />
 
 </menu>
