--- a/res/layout/f2.xml
+++ b/res/layout/f2.xml
@@ -6,12 +6,17 @@
  
     <TextView
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
 		android:gravity="center"
         android:textColor="#0000ff"
         android:text="@string/ShowFragment2" 
         android:background="#ffffff"
         />
-    
+
+    <WebView
+        android:id="@+id/webView1"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+ 	/>
  
 </RelativeLayout>
